# nuedc_control_car_freertos_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.zh-CN.md  main.c  ti_msp_dl_config.c  ti_msp_dl_config.h
app/: app_config.h  app_main.c  app_main.h  app_mission.c  app_mission.h  app_shared.c  app_shared.h  app_state.c  app_state.h  app_tasks.c  app_tasks.h
cmake/toolchains/: arm-none-eabi-gcc.cmake
common/: filter.c  filter.h  pid.c  pid.h
config/: FreeRTOSConfig.h  vehicle_calibration.h
control/: chassis.c  chassis.h  line_tracker.c  line_tracker.h
docs/: ARCHITECTURE.md  CALIBRATION.md  FREERTOS_PLAN.md  IMU_PORTING.md  PIN_MAP.md  PORTING.md
modules/display/: ssd1306_mspm0.c  ssd1306_mspm0.h
modules/encoder/: bsp_encoder.c  bsp_encoder.h
modules/imu/: bsp_imu.c  bsp_imu.h  imu.h  imu_profile.c  imu_profile.h  imu_service.c
modules/imu/device/: dev_icm45688.c  dev_icm45688.h
modules/line_sensor/: bsp_adc.c  bsp_adc.h  dev_line_sensor.c  dev_line_sensor.h
modules/motor/: bsp_motor.c  bsp_motor.h  dev_motor.c  dev_motor.h
modules/telemetry/: bsp_uart.c  bsp_uart.h  rtt_log.c  rtt_log.h  telemetry.c  telemetry.h
modules/vision/: bsp_k230.c  bsp_k230.h  dev_vision.c  dev_vision.h
platform/mspm0g3507/: nuedc_control_freertos.syscfg  pin_map.h
platform/mspm0g3507/drivers/: drv_gpio.c  drv_gpio.h  drv_hbridge_motor.c  drv_hbridge_motor.h  drv_i2c.c  drv_i2c.h  drv_line_sensor.c  drv_line_sensor.h  drv_pwm.c  drv_pwm.h  drv_quad_encoder.c  drv_quad_encoder.h  drv_spi.c  drv_spi.h  drv_time.c  drv_time.h  drv_uart.c  drv_uart.h
scripts/: build.sh  check_env.sh  env.sh  flash_jlink.sh  jlink_gdb_server.sh  serial_monitor.sh
system/: fault_manager.c  fault_manager.h  health_monitor.c  health_monitor.h  watchdog.c  watchdog.h
targetConfigs/: mspm0g3507.ccxml
tools/imu/: README.md  imu_capture.py
